deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-server
  name: nginx-server
  namespace: sec-ns
spec:
  revisionHistoryLimit: 10
  replicas: 3
  selector:
    matchLabels:
      app: nginx-server
  template:
    metadata:
      labels:
        app: nginx-server
    spec:
      containers:
      - image: nginx:1.20-alpine
        name: nginx
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m 
            memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-server
  name: nginx-server
  namespace: sec-ns
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-server
