ap.yaml
# requires k8s >= 1.30
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "revisions-limit"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments"]
  validations:
    - expression: "object.spec.revisionHistoryLimit <= 5"
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "revision-limit-binding"
spec:
  policyName: "revisions-limit"
  validationActions: [Deny] # or Warn or Audit
  matchResources:
    namespaceSelector:
      matchLabels:
        lab: "15"
